displays people & items

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -23,13 +23,14 @@
     {{#purchases}}
 
     <tr>
-        <td>{{customer.name}}</td>
-        <td>{{customer.email}}</td>
+        <td>{{name}}</td>
+        <td>{{email}}</td>
         <td>{{category}}</td>
         <td>{{creditCard}}</td>
         <td>{{cvv}}</td>
         <td>{{date}}</td>
     </tr>
+
     {{/purchases}}
 
 </table>
