--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -4,6 +4,31 @@
     <meta charset="UTF-8">
     <title>Home</title>
 </head>
+<style>
+
+table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+td, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 12px;
+}
+th {
+   background-color:
+
+}
+tr:nth-child(even) {
+    background-color: #dddddd;
+}
+tr:hover{
+    background-color: #f5f5f5
+}
+
+</style>
+
 <body>
 
 <a href="/">All |</a>
