--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -2,73 +2,61 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Home</title>
+    <title>Purchases</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<style>
 
-table {
-    font-family: arial, sans-serif;
-    border-collapse: collapse;
-    width: 100%;
-}
-td, th {
-    border: 1px solid #dddddd;
-    text-align: left;
-    padding: 12px;
-}
-th {
-   background-color:
-
-}
-tr:nth-child(even) {
-    background-color: #dddddd;
-}
-tr:hover{
-    background-color: #f5f5f5
-}
-
-</style>
 
 <body>
 
-<a href="/">All |</a>
-<a href="/?category=Furniture">Furniture |</a>
-<a href="/?category=Alcohol">Alcohol |</a>
-<a href="/?category=Toiletries">Toiletries |</a>
-<a href="/?category=Shoes">Shoes |</a>
-<a href="/?category=Food">Food |</a>
-<a href="/?category=Jewlery">Jewlery</a>
 
 
 <form action="/" method="get"></form>
 
 
-
-<table>
-
-    <tr>
-        <th>Name</th>
-        <th>Email</th>
-        <th>Category</th>
-        <th>Credit Card</th>
-        <th>CVV</th>
-        <th>Date</th>
-    </tr>
+<div class="table-stuff">
 
 
-    {{#purchases}}
+    <table cellpadding="0" cellspacing="0" border="0">
 
-    <tr>
-        <td>{{customer.name}}</td>
-        <td>{{customer.email}}</td>
-        <td>{{category}}</td>
-        <td>{{creditCard}}</td>
-        <td>{{cvv}}</td>
-        <td>{{date}}</td>
-    </tr>
 
-    {{/purchases}}
+        <tr>
+            <th>Name</th>
+            <th>Email</th>
+            <th>Category</th>
+            <th>Credit Card</th>
+            <th>CVV</th>
+            <th>Date</th>
+        </tr>
 
-</table>
+
+
+        {{#purchases}}
+
+        <tr>
+            <td>{{customer.name}}</td>
+            <td>{{customer.email}}</td>
+            <td>{{category}}</td>
+            <td>{{creditCard}}</td>
+            <td>{{cvv}}</td>
+            <td>{{date}}</td>
+        </tr>
+
+        {{/purchases}}
+
+    </table>
+
+</div>
+
+<div class="buttons">
+    <a href="/"><button>All</button></a>
+    <a href="/?category=Furniture"><button>Furniture</button></a>
+    <a href="/?category=Alcohol"><button>Alcohol</button></a>
+    <a href="/?category=Toiletries"><button>Toiletries</button></a>
+    <a href="/?category=Shoes"><button>Shoes</button></a>
+    <a href="/?category=Food"><button>Food</button></a>
+    <a href="/?category=Jewelry"><button>Jewelry</button></a>
+</div>
+
 </body>
 </html>
