--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -8,17 +8,27 @@
 
 
 <body>
-
-
+<h1>PURCHASES</h1>
 
 <form action="/" method="get"></form>
 
+
+<div class="buttonH">
+
+<a href="/"><button>All</button></a>
+<a href="/?category=Furniture"><button>Furniture</button></a>
+<a href="/?category=Alcohol"><button>Alcohol</button></a>
+<a href="/?category=Toiletries"><button>Toiletries</button></a>
+<a href="/?category=Shoes"><button>Shoes</button></a>
+<a href="/?category=Food"><button>Food</button></a>
+<a href="/?category=Jewelry"><button>Jewelry</button></a>
+
+</div>
 
 <div class="table-stuff">
 
 
     <table cellpadding="0" cellspacing="0" border="0">
-
 
         <tr>
             <th>Name</th>
@@ -28,7 +38,6 @@
             <th>CVV</th>
             <th>Date</th>
         </tr>
-
 
 
         {{#purchases}}
@@ -48,15 +57,6 @@
 
 </div>
 
-<div class="buttons">
-    <a href="/"><button>All</button></a>
-    <a href="/?category=Furniture"><button>Furniture</button></a>
-    <a href="/?category=Alcohol"><button>Alcohol</button></a>
-    <a href="/?category=Toiletries"><button>Toiletries</button></a>
-    <a href="/?category=Shoes"><button>Shoes</button></a>
-    <a href="/?category=Food"><button>Food</button></a>
-    <a href="/?category=Jewelry"><button>Jewelry</button></a>
-</div>
 
 </body>
 </html>
